tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_hooks_post_create.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning post-create [1minstall[0m:[0m
[107m [0m  [1m[34muv[0m sync[0m

  Resolved 24 packages in 145ms
  Installed 24 packages in 1.2s
✅ [32mCreated new worktree for [1m[32mfeature-x[0m[32m from [1m[32mmain[0m[32m at [1m[32m[TMPDIR]/test-repo.feature-x[0m[0m
🔄 [36mRunning post-start [1mdev[0m:[0m
[107m [0m  [1m[34muv[0m run dev[0m
